--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -1,9 +1,9 @@
-@import url("../mollie-payments/plugins/creditcard-components.plugin");
-@import url("../mollie-payments/plugins/apple-pay-direct.plugin");
-@import url("./checkout/payment-selection");
-@import url("./account/payment-selection");
-@import url("./account/subscriptions");
-@import url("./component/credit-card-mandate");
-@import url("./component/paypal-express-button");
-@import url("./component/express-button");
-@import url("./display");
+@import "../mollie-payments/plugins/creditcard-components.plugin";
+@import "../mollie-payments/plugins/apple-pay-direct.plugin";
+@import "./checkout/payment-selection";
+@import "./account/payment-selection";
+@import "./account/subscriptions";
+@import "./component/credit-card-mandate";
+@import "./component/paypal-express-button";
+@import "./component/express-button";
+@import "./display";
