NTR: change subscription according to WCAG standard

--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -274,10 +274,11 @@
                                     data-target="#subscription{{ subscription.id }}"
                                     data-bs-toggle="collapse"
                                     data-bs-target="#subscription{{ subscription.id }}"
+
                                     aria-expanded="false">
                                 {% block page_account_subscription_item_subscription_table_body_cell_toggle_subscription_details_button_text %}
                                     <span class="subscription-view-btn-text">{{ "molliePayments.subscriptions.account.orderActionView"|trans|sw_sanitize }}</span>
-                                    <span class="subscription-hide-btn-text d-none">{{ "molliePayments.subscriptions.account.orderActionHide"|trans|sw_sanitize }}</span>
+                                    <span class="subscription-hide-btn-text">{{ "molliePayments.subscriptions.account.orderActionHide"|trans|sw_sanitize }}</span>
                                 {% endblock %}
                             </button>
                         </div>
@@ -323,7 +324,7 @@
                                                                                 {% block page_account_mollie_subscriptions_item_detail_content_billing_address_button %}
                                                                                     {% if page.allowAddressEditing %}
                                                                                         <button type="button"
-                                                                                                class="btn btn-primary"
+                                                                                                class="btn btn-secondary"
                                                                                                 data-toggle="modal"
                                                                                                 data-target="#editBillingAddress{{ subscription.id }}"
                                                                                                 data-bs-toggle="modal"
@@ -421,7 +422,7 @@
                                                                                                                     <div class="address-form-actions">
                                                                                                                         {% block component_address_subscription_billing_address_form_actions_submit %}
                                                                                                                             <button type="submit"
-                                                                                                                                    class="address-form-submit btn btn-primary"
+                                                                                                                                    class="address-form-submit btn btn-secondary"
                                                                                                                                     title="{{ "account.addressSaveChange"|trans|striptags }}"
                                                                                                                                     data-test="btn-subscription-edit-billing-address-save">
                                                                                                                                 {% block component_address_subscription_billing_address_form_actions_submit_text %}
@@ -481,7 +482,7 @@
                                                                             <div class="card-actions">
                                                                                 {% if page.allowAddressEditing %}
                                                                                     <button type="button"
-                                                                                            class="btn btn-primary"
+                                                                                            class="btn btn-secondary"
                                                                                             data-toggle="modal"
                                                                                             data-target="#editShippingAddress{{ subscription.id }}"
                                                                                             data-bs-toggle="modal"
